fix: CTA gap on mobile

--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,9 @@ blockquote {
 .cta-section .container {
     background-color: var(--highlight-color);
     color: var(--white-color);
-    flex-wrap: wrap;
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: space-between;
     margin: 0 auto;
     padding: 32px 64px;
